--- a/article-example.html
+++ b/article-example.html
@@ -76,10 +76,10 @@
       <div class="row justify-content-center">
         <div class="col-12 col-md-10 col-lg-7 text-center">
           <!-- Heading -->
-          <h1 class="display-2 fw-bold text-white">L'histoire de ma chaîne</h1>
+          <h1 class="display-2 fw-bold text-darkblue">L'histoire de ma chaîne</h1>
 
           <!-- Text -->
-          <p class="lead mb-0 text-white-75">Mes débuts, actuellement et mes futurs projets</p>
+          <p class="lead mb-0 text-blue-75">(Mes débuts, actuellement et mes futurs projets)</p>
         </div>
       </div>
       <!-- / .row -->
