--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
           <!-- Text -->
           <p class="lead mb-7 text-center text-muted">
-            J'ai créé ma chaîne youtube le 10 Fevrié 2024, à la base sans ambition plus j'en découvre sur le monde de
+            J'ai créé ma chaîne youtube le 10 Fevrier 2024, à la base sans ambition plus j'en découvre sur le monde de
             youtube plus j'ai envie de m'y investir.
             Mes trois premières videos étaient comment dire... Pas folle mais je devient de meilleur en meilleur
             m'inspirant d'autre créateur de contenue comme Joerntie ou Splash.
