--- a/index.html
+++ b/index.html
@@ -97,10 +97,8 @@
 
           <!-- Text -->
           <p class="lead mb-7 text-center text-muted">
-            J'ai créé ma chaîne youtube le 10 Fevrier 2024, à la base sans ambition plus j'en découvre sur le monde de
-            youtube plus j'ai envie de m'y investir.
-            Mes trois premières videos étaient comment dire... Pas folle mais je devient de meilleur en meilleur
-            m'inspirant d'autre créateur de contenue comme Joerntie ou Splash.
+            J'ai créé ma chaîne YouTube le 10 février 2024, au départ sans ambition. Mais plus j'en découvre sur le monde de YouTube, plus j'ai envie de m'y investir.
+Mes trois premières vidéos étaient… comment dire… pas folles. Mais je deviens de meilleur en meilleur, en m'inspirant d'autres créateurs de contenu comme Joerntie ou Splash.
           </p>
 
           <figure class="figure mb-7">
@@ -150,13 +148,12 @@
 
           <!-- Text -->
           <p>
-            Actuellement, j'ai sorties 4 videos, chacune meilleur que la précédente, toute sont des clips Rocket League.
-            Je pense que je me diversiferais dans 3 ou 3 videos car pour l'instant, je veux maitriser plus ce genre de
-            videos avant de switch sur un autre genre.
+            Actuellement, j'ai sorti 4 vidéos, chacune meilleure que la précédente. Ce sont toutes des clips de Rocket League.
+Je pense me diversifier d'ici 2 ou 3 vidéos, car pour l'instant, je veux mieux maîtriser ce type de contenu avant de passer à un autre genre.
           </p>
           <ul class="mb-0">
             <li>
-              J'utilise comme logiciel dans montage Capcut qui est je trouve facile à prendre en mains.
+              J'utilise comme logiciel dans montage Capcut qui est, je trouve facile à prendre en mains.
             </li>
             <li class="mt-4">
               J'utilise aussi acethinquer qui me permet de convertir gratuitement des audio et des video youtube.
@@ -233,9 +230,7 @@
 
           <!-- Text -->
           <p>
-            Pour mes futurs projets, je pensent comme je l'ais dit précédement continuer encore un peus sur Rocket
-            League, mais par la suites, je pense commencé une séries Minecraft ou Rocket League, puis par la suites je
-            pourrais joué à d'autres jeu.
+            Pour mes futurs projets, je pense, comme je l'ai dit précédemment, continuer encore un peu sur Rocket League. Mais par la suite, je pense commencer une série sur Minecraft ou Rocket League. Ensuite, je pourrai jouer à d'autres jeux.
           </p>
           <p>
             Pour l'instant mes objectifs sont :
@@ -251,7 +246,7 @@
 
               <!-- Text -->
               <p>
-                Ateindre les 100 abonnés
+                Atteindre les 100 abonnés
               </p>
             </li>
             <li class="d-flex">
@@ -262,7 +257,7 @@
 
               <!-- Text -->
               <p>
-                ce lancé sur twitch
+                Me lancé sur twitch
               </p>
             </li>
           </ul>
