--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ Je pense me diversifier d'ici 2 ou 3 vidéos, car pour l'instant, je veux mieux 
       <div class="row">
         <div class="col-12 col-md-4 col-lg-3">
           <!-- Text -->
-          <p class="text-gray-700 mb-2">Mes résaux</p>
+          <p class="text-gray-700 mb-2">Mes réseaux</p>
 
           <!-- Social -->
           <ul class="list-unstyled list-inline list-social mb-6 mb-md-0">
