--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ Je pense me diversifier d'ici 2 ou 3 vidéos, car pour l'instant, je veux mieux 
 
               <!-- Text -->
               <p>
-                Me lancé sur twitch
+                Me lancer sur twitch
               </p>
             </li>
           </ul>
